Fix unused warnings in WebCore https://bugs.webkit.org/show_bug.cgi?id=245319

Reviewed by Chris Dumez.

Fix unusued warnings around parameters, functions and member variables
reported by Clang.

* Source/WebCore/Modules/push-api/PushManager.cpp:
* Source/WebCore/html/track/VTTCue.cpp:
* Source/WebCore/inspector/agents/page/PageNetworkAgent.cpp:
* Source/WebCore/inspector/agents/page/PageNetworkAgent.h:
* Source/WebCore/page/FrameView.cpp:
* Source/WebCore/page/WheelEventDeltaFilter.cpp:
* Source/WebCore/page/WheelEventTestMonitor.cpp:
* Source/WebCore/platform/graphics/cairo/GraphicsContextCairo.cpp:
* Source/WebCore/rendering/RenderLayerScrollableArea.cpp:
* Source/WebCore/rendering/svg/RenderSVGBlock.cpp:
* Source/WebCore/rendering/svg/RenderSVGInline.cpp:

Canonical link: https://commits.webkit.org/254594@main